updated todo and readme

--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 Write the Evernote stuff and test it thoroughly
 Standardize plugin output handling
-Get Last.fm plugin working before moving on to other plugins
+Get Last.fm plugin working before moving on to other plugins, dumbhead
 Make the output non-ugly
+Fix the em dash in output
 
 ### Later
 
